--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BaseProjectMVVM</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="clear_calendar">Clear</string>
 </resources>
